sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/SBS_ScheduledBatchRunComponent__c.object-meta.xml
<CustomObject>
    <description>Represents a batch process within a scheduled batch run.</description>
    <label>Scheduled Batch Run Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Batch Run Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>