sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <description>The id of the apex batch job.</description>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>