sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message, in case it can be established.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>