sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/FinishTime__c.field-meta.xml
<CustomField>
    <fullName>FinishTime__c</fullName>
    <description>The date and time when this batch process was finished.</description>
    <label>Finish Time</label>
    <type>DateTime</type>
</CustomField>