sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/RunOrder__c.field-meta.xml
<CustomField>
    <fullName>RunOrder__c</fullName>
    <description>The order of this batch process within the scheduled batch run.</description>
    <label>Run Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>