sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/ScheduledBatchRun__c.field-meta.xml
<CustomField>
    <fullName>ScheduledBatchRun__c</fullName>
    <description>The scheduled batch run under which this batch process run.</description>
    <label>Scheduled Batch Run</label>
    <referenceTo>SBS_ScheduledBatchRun__c</referenceTo>
    <relationshipLabel>Scheduled Batch Run Components</relationshipLabel>
    <relationshipName>ScheduledBatchRunComponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>