sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>The date and time when this batch process was started.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>