sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this batch process within the scheduled batch run. Batches starts as scheduled and should move from started to success. In cases where failure occurs when initializing the batch the batches receive the init error status and in the case where one or several of its batches fails the status is set to fail.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Init Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>