sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/Total_Number_Of_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Records_Processed__c</fullName>
    <description>Used to Store the number of records deleted for particular batch</description>
    <label>Total Number Of Records Processed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>