sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/TotalBatches__c.field-meta.xml
<CustomField>
    <fullName>TotalBatches__c</fullName>
    <description>The total number of batches within this batch process.</description>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>