sas-core/main/default/objects/SBS_ScheduledBatchRunComponent__c/fields/TotalErrors__c.field-meta.xml
<CustomField>
    <fullName>TotalErrors__c</fullName>
    <description>The total number of batches within this batch process which resulted in an error.</description>
    <label>Total Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>